src/monica/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monica
  namespace: monica
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: monica.irupeconsultores.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monica
                port:
                  name: http
